# adventofcode2020

./: LICENSE  README.md
day01/: Makefile  main.adb
day02/: main.adb
day03/: Makefile  main.lisp
day04/: main.lisp
day05/: Makefile  main.c
day06/: Makefile  main.c
day07/: Makefile  main.pl
day08/: main.pl  test_input.txt
day09/: main.cpp
day10/: Makefile  main.cpp
day11/: Makefile  main.go
day12/: main.go
day13/: Makefile  main.py  main_puzzle1.rs
day14/: Cargo.toml  Makefile
day14/src/: main.rs
day15/: Makefile  main.java
day16/: Makefile  main.java
day17/exercise1/: Makefile  main.f90
day17/exercise2/: main.f90
day18/: test_input1.txt
day18/fortran/: Makefile  puzzle1.f90  puzzle2.f90
day18/python/: Makefile  puzzle1.py  puzzle2.py
day19/: Makefile  puzzle1.py  puzzle2.py
day20/: Makefile  puzzle1.py
