[package]
name = "day14"
version = "0.1.0"
authors = ["Søren Bøgeskov Nørgaard <soerenbnoergaard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
